--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -1,15 +1,15 @@
 PORT=5000
 
-POSTGRES_PORT=5432
-POSTGRES_DB_HOST=db
-POSTGRES_USER=development
-POSTGRES_PASSWORD=development
-POSTGRES_DATABASE=development
-POSTGRES_ROOT_PASSWORD=development
+MYSQL_PORT=3306
+MYSQL_DB_HOST=db
+MYSQL_USER=development
+MYSQL_PASSWORD=development
+MYSQL_DATABASE=development
+MYSQL_ROOT_PASSWORD=development
 
-POSTGRES_PORT_TEST=5432
-POSTGRES_DB_HOST_TEST=db-test
-POSTGRES_USER_TEST=development-test
-POSTGRES_PASSWORD_TEST=development-test
-POSTGRES_DATABASE_TEST=development-test
-POSTGRES_ROOT_PASSWORD_TEST=development-test
+MYSQL_PORT_TEST=3306
+MYSQL_DB_HOST_TEST=db-test
+MYSQL_USER_TEST=development-test
+MYSQL_PASSWORD_TEST=development-test
+MYSQL_DATABASE_TEST=development-test
+MYSQL_ROOT_PASSWORD_TEST=development-test
