--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -19,38 +19,38 @@
 	},
 	"dependencies": {
 		"@faker-js/faker": "^8.0.2",
+		"awilix": "^10.0.2",
 		"body-parser": "^1.20.2",
 		"compression": "^1.7.4",
 		"errorhandler": "^1.5.1",
-		"express": "^4.18.2",
+		"express": "^4.19.2",
 		"express-promise-router": "^4.1.1",
 		"express-validator": "^7.0.1",
-		"helmet": "^7.0.0",
-		"http-status": "^1.6.2",
-		"node-dependency-injection": "^2.7.1",
-		"reflect-metadata": "^0.1.13",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.1.6",
-		"uuid": "^9.0.0"
+		"helmet": "^7.1.0",
+		"http-status": "^1.7.4",
+		"ts-node": "^10.9.2",
+		"typeorm": "^0.3.20",
+		"typescript": "^5.4.5",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
-		"@cucumber/cucumber": "^9.3.0",
-		"@types/body-parser": "^1.19.2",
-		"@types/compression": "^1.7.2",
-		"@types/errorhandler": "^1.5.0",
-		"@types/express": "^4.17.17",
+		"@cucumber/cucumber": "^10.7.0",
+		"@types/body-parser": "^1.19.5",
+		"@types/compression": "^1.7.5",
+		"@types/errorhandler": "^1.5.3",
+		"@types/express": "^4.17.21",
 		"@types/glob": "^8.1.0",
-		"@types/jest": "^29.5.3",
-		"@types/mocha": "^10.0.1",
-		"@types/node": "^20.5.6",
-		"@types/supertest": "^2.0.12",
-		"@typescript-eslint/eslint-plugin": "^6.2.1",
-		"@typescript-eslint/parser": "^6.2.1",
-		"eslint": "^8.46.0",
-		"jest": "^29.6.2",
-		"prettier": "3.0.0",
-		"supertest": "^6.3.3",
-		"ts-jest": "^29.1.1",
+		"@types/jest": "^29.5.12",
+		"@types/mocha": "^10.0.6",
+		"@types/node": "^20.12.11",
+		"@types/supertest": "^6.0.2",
+		"@typescript-eslint/eslint-plugin": "^7.8.0",
+		"@typescript-eslint/parser": "7.8.0",
+		"eslint": "8.56.0",
+		"jest": "^29.7.0",
+		"prettier": "3.2.5",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.1.2",
 		"ts-node-dev": "^2.0.0"
 	}
 }
